--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
         <item>Call</item>
         <item>Bidding</item>
     </string-array>
+    <string-array name="Products">
+        <item>Potato</item>
+        <item>Spinach</item>
+        <item>Onion</item>
+        <item>Mango</item>
+        <item>Lettuce</item>
+        <item>Tomato</item>
+        <item>Oranges</item>
+        <item>Lady Finger</item>
+        <item>Dates</item>
+        <item>Others</item>
+    </string-array>
 </resources>
