add telugu and logout in farmer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
         <item>en-US</item>
         <item>bn</item>
         <item>hi</item>
+        <item>te</item>
     </string-array>
 </resources>
